[package]
name = "smt"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", default-features = false }
sha3 = { version = "0.10.8", default-features = false }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "sparse_insert"
harness = false

[[bench]]
name = "sparse_proof"
harness = false
